feat: Implement live-streaming STT with configurable settings
- real-time streaming recognition with bi-directional gRPC stream to send audio chunks as they're captured and receive transcription results asynchronously.
- SpeechToTextService reflecting streaming lifecycle, and introduced a functional interface StreamingRecognitionListener for real-time result callback.
- GoogleCloudSpeechToTextService with AudioInputService.AudioDataListener to directly feed captured audio into the streaming session.

- stt settings manager with POJO to centralize configurable parameters for `RecognitionConfig` (language, punctuation, word offsets, model, speech contexts, and recognition type and more).
- speech to text managers to persist these STT settings using Java Preferences, ensuring user preferences are saved across sessions.
- STTSettingsDialog to provide a user-friendly Swing UI for adjusting all STT parameters, including clear descriptions for each setting.
- GoogleCloudSpeechToTextService now dynamically builds its `RecognitionConfig` and `StreamingRecognitionConfig` based on the settings loaded from `SpeechToTextSettingsManager`.

- `testCredentials()` method to provide more accurate feedback on API client initialization status.

- `UIBuilder` and `MainFrame` were updated to orchestrate the new streaming STT lifecycle and integrate the new "STT Settings" button, allowing users to access and modify transcription parameters directly.
- `SpeechContexts` handling to correctly add individual phrases to the recognition configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,15 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>24.0.1</maven.compiler.source>
-    <maven.compiler.target>24.0.1</maven.compiler.target>
+    <maven.compiler.source>24</maven.compiler.source>
+    <maven.compiler.target>24</maven.compiler.target>
     <junit.version>5.10.0</junit.version>
     <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+    <google-cloud-speech.version>4.63.0</google-cloud-speech.version>
   </properties>
 
   <dependencies>
+    <!-- JUnit -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -33,11 +35,54 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+
+    <!-- Lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.38</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <!-- Google Cloud Speech-to-Text -->
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-speech</artifactId>
+      <version>4.63.0</version>
+    </dependency>
+
+    <!-- Optional: If you specifically use the v1p1beta1 API -->
+    <dependency>
+      <groupId>com.google.api.grpc</groupId>
+      <artifactId>grpc-google-cloud-speech-v1p1beta1</artifactId>
+      <version>2.63.0</version>
+    </dependency>
+
+    <!-- gRPC Netty (runtime transport) -->
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-netty-shaded</artifactId>
+      <version>1.64.0</version>
+    </dependency>
+
+    <!-- Guava (used in GCP SDKs) -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>33.1.0-jre</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven.compiler.plugin.version}</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
