--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
       <version>1.0.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+    </dependency>
+
   </dependencies>
 
   <build>
