feat(ui): Integrate FlatLaf for a modern look and feel - Replaces the default Swing "Metal" theme with the clean,cross-platform FlatLightLaf theme. - modern user interface, including all frames, dialogs, and components, providing a more professional and user-friendly appearance.

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
       <version>8.0.33</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.formdev</groupId>
+      <artifactId>flatlaf</artifactId>
+      <version>3.4.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
